# Prism4D

./: .dockerignore  .gitignore  .mcp.json  AATGS_COMPLETION_REPORT.md  AATGS_INTEGRATION_REPORT.md  ADVANCED_OPTIMIZATION_STRATEGIES.md  ALLOC_ZEROS_CHANGES_SUMMARY.txt  ALLOC_ZEROS_FIX_REPORT.md  CLAUDE.md  COMPLETE PATCH FILE MANIFEST.txt  COMPLETE_CAPABILITIES_MATRIX.md  COMPREHENSIVE_SESSION_REPORT.md  COPY_DTOH_FIX_REPORT.md  CORRECTED_UNDERSTANDING.md  CUDARC_0181_MIGRATION_STATUS.md  CUDARC_0_18_1_API_FIX_REPORT.md  CUDARC_API_FIX_COMPLETE.md  CUDARC_COMPLETE_FIX_REPORT.md  CUDARC_MIGRATION_COMPLETE_REPORT.md  CUDARC_MIGRATION_FINAL_REPORT.md  CUDARC_MIGRATION_STATUS.md  Cargo.toml  DTOH_SYNC_COPY_FIX_COMPLETE.md  DTOH_SYNC_COPY_MIGRATION_COMPLETE.md  EXACT ALIGNMENT FOR PRISM-VE.txt  FINAL_SESSION_HANDOFF.md  FINAL_SESSION_STATUS.md  FINAL_SESSION_SUMMARY_COMPLETE.md  FITNESS_CYCLE_MODULES_COMPLETE.md  FITNESS_MODULE_PROGRESS.md  FITNESS_MODULE_STATUS_CURRENT.md  GPU_FLUXNET_IMPLEMENTATION_PLAN.md  GPU_GRID_FIX.md  HANDOFF.md  HONEST_STATUS_NEXT_STEPS.md  HTOD_COPY_FIX_REPORT.md  HTOD_SYNC_COPY_MIGRATION_REPORT.md  IMPLEMENTATION_CHECKLIST_VASIL_BENCHMARK.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROMPT_SUMMARY.md  (+93 more)
.claude/: PRISM_VE_OPTIMIZATION_AGENT_PROMPT.md  marketplace.json  settings.json  settings.local.json
configs/examples/: AGGRESSIVE_17.toml  CHAMPION_20_COLORS.toml  COMBINED_WORLD_RECORD.toml  Cargo.toml  DSJC500_48COLOR.toml  DSJC500_AGGRESSIVE.toml  DSJC500_CONFIG.toml  DSJC500_OPTIMIZED.toml  EXTREME_MAX.toml  FAST_17.toml  FLAT1000_76_HYPERTUNED.toml  FORCE_WHCR_TEST.toml  FULL_POWER_17.toml  HYBRID_OPTIMIZED.toml  OPTIMIZED_17_BALANCED.toml  OPTIMIZED_17_COLOR_ATTEMPT.toml  OPTIMIZED_CONFLICT_REDUCTION.toml  PHASE3_REPAIR_ENHANCED.toml  TUNED_17.toml  ULTIMATE_MAX_GPU.toml  ULTRA_AGGRESSIVE_WHCR.toml  ULTRA_FAST_17.toml  WHCR_FIX_TEST.toml  WHCR_TEST.toml  WORKING_17.toml  WORLD_RECORD_17.toml  WORLD_RECORD_ATTEMPT.toml  biomolecular_nipah.toml  dsjc250_aggressive.toml  dsjc250_cma.toml  dsjc250_deep_coupling.toml  dsjc250_fast.toml  dsjc250_hybrid.toml  dsjc250_memetic.toml  dsjc250_memetic_run3.toml  dsjc250_phase2_precise.toml  dsjc500_quantum_stable.toml  fluxnet_training.toml  full_tunable_example.toml  gnn_test.toml  (+3 more)
crates/prism-core/: Cargo.toml
crates/prism-core/src/: lib.rs
crates/prism-physics/: Cargo.toml
crates/prism-physics/src/: lib.rs
foundation/mathematics/: Cargo.toml  information_theory.rs  mod.rs  proof_system.rs  quantum_mechanics.rs  thermodynamics.rs
foundation/neuromorphic/: CUDARC_09_MIGRATION_COMPLETE.md  Cargo.toml  analyze_benchmark.py
foundation/neuromorphic/benches/: cpu_vs_gpu_benchmark.rs
foundation/neuromorphic/src/: cuda_kernels.rs  gpu_memory.rs  gpu_optimization.rs  gpu_reservoir.rs  gpu_simulation.rs  lib.rs  pattern_detector.rs  reservoir.rs  spike_encoder.rs  stdp_profiles.rs  transfer_entropy.rs  types.rs
foundation/prct-core/: COMPREHENSIVE_CONFIG_COMPLETE.md  CUDARC_0.18.1_FIXES_COMPLETE.md  CUDARC_MIGRATION.md  Cargo.toml
foundation/prct-core/.claude/agents/: prism-gpu-pipeline-architect.md
foundation/prct-core/configs/: README.md  dsjc250_fast.v1.toml  dsjc500_wr.v1.toml  quick.v1.1.toml  quick_test.toml  quick_test_rtx5070.v1.0.toml  runpod_8gpu.v1.1.toml  world_record.v1.json  world_record.v1.toml  wr_sweep_A.v1.1.toml  wr_sweep_B.v1.1.toml  wr_sweep_C.v1.1.toml  wr_sweep_D.v1.1.toml  wr_sweep_D_aggr.v1.1.toml  wr_sweep_D_aggr_seed_1337.v1.1.toml  wr_sweep_D_aggr_seed_42.v1.1.toml  wr_sweep_D_aggr_seed_9001.v1.1.toml  wr_sweep_D_seed_1337.v1.1.toml  wr_sweep_D_seed_42.v1.1.toml  wr_sweep_D_seed_9001.v1.1.toml  wr_sweep_E.v1.1.toml  wr_sweep_F.v1.1.toml  wr_sweep_F_seed_1337.v1.1.toml  wr_sweep_F_seed_42.v1.1.toml  wr_sweep_F_seed_9001.v1.1.toml  wr_sweep_G.v1.1.toml  wr_ultra_8xb200.v1.0.toml  wr_vertex_targeted.v1.0.toml
foundation/prct-core/examples/: dimacs_gpu_benchmark.rs  full_integration_benchmark.rs  gpu_graph_coloring.rs  world_record_dsjc1000.rs
foundation/prct-core/foundation/prct-core/configs/: README.md  quick_test.toml  world_record.v1.json  world_record.v1.toml
foundation/prct-core/src/: algorithm.rs  cascading_pipeline.rs  coloring.rs  config_io.rs  config_wrapper.rs  coupling.rs  cpu_init.rs  dimacs_parser.rs  drpp_algorithm.rs  dsatur_backtracking.rs  errors.rs  geodesic.rs  gpu_active_inference.rs  gpu_active_inference.rs.bak  gpu_kuramoto.rs  gpu_kuramoto.rs.bak  gpu_prct.rs  gpu_quantum.rs  gpu_quantum_annealing.rs  gpu_quantum_annealing.rs.bak  gpu_quantum_multi.rs  gpu_thermodynamic.rs  gpu_thermodynamic_multi.rs  gpu_thermodynamic_streams.rs  gpu_transfer_entropy.rs  gpu_transfer_entropy.rs.bak  initial_coloring.rs  iterative_controller.rs  lib.rs  memetic_coloring.rs  ports.rs  quantum_coloring.rs  reservoir_sampling.rs  simulated_annealing.rs  sparse_qubo.rs  transfer_entropy_coloring.rs  tsp.rs  tsp_quality.rs  world_record_pipeline.rs  world_record_pipeline_gpu.rs
foundation/prct-core/src/adapters/: coupling_adapter.rs  mod.rs  neuromorphic_adapter.rs  quantum_adapter.rs
foundation/prct-core/src/fluxnet/: approximator.rs  command.rs  config.rs  controller.rs  mod.rs  profile.rs  telemetry.rs
foundation/prct-core/src/gpu/: event.rs  mod.rs  multi_device_pool.rs  state.rs  stream_pool.rs
foundation/prct-core/src/hypertune/: action.rs  controller.rs  mod.rs
foundation/prct-core/src/telemetry/: handle.rs  mod.rs  run_metric.rs
foundation/prct-core/tests/: quantum_gpu.rs  te_gpu_fix_test.rs  thermo_coloring_test.rs
foundation/quantum/: CUDARC_FIX_PLAN.md  CUDARC_MIGRATION_COMPLETE.md  Cargo.toml  MIGRATION_STATUS_FINAL.md  README_CUDARC_MIGRATION.md
foundation/quantum/src/: gpu_coloring.rs  gpu_k_opt.rs  gpu_tsp.rs  hamiltonian.rs  lib.rs  prct_coloring.rs  prct_tsp.rs  qubo.rs  robust_eigen.rs  security.rs  types.rs
foundation/quantum/tests/: eigen_tests.rs
foundation/shared-types/: Cargo.toml
foundation/shared-types/src/: config_registry.rs  coupling_types.rs  graph_types.rs  lib.rs  neuro_types.rs  quantum_types.rs
(+473 files in other folders)
