[package]
name = "prism-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
log = { workspace = true }

# GPU support (optional)
cudarc = { workspace = true, optional = true }

[features]
default = []
cuda = ["cudarc"]

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3.8"
