[package]
name = "prct-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Phase Resonance Chromatic-TSP (PRCT) Domain Logic - Production FluxNet RL & GPU Thermodynamic"

[features]
default = []
cuda = ["cudarc", "neuromorphic-engine"]

[dependencies]
# Foundation dependencies
shared-types = { path = "../shared-types", features = ["serde"] }
neuromorphic-engine = { path = "../neuromorphic", features = ["cuda"], optional = true }

# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Scientific computing
ndarray = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
num-complex = { workspace = true }
bincode = { workspace = true }

# GPU acceleration
cudarc = { workspace = true, optional = true }

# Utilities
chrono = { workspace = true }
crossbeam-channel = "0.5"

[dev-dependencies]
tokio = { workspace = true }
